--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "FSi\\Tests\\": [
-                "tests/unit",
-                "tests/_support"
-            ]
+            "FSi\\Tests\\": "tests/_support",
+            "FSi\\Tests\\Component\\Files\\": "tests/unit"
         }
     },
     "require": {
@@ -32,6 +30,7 @@
     },
     "require-dev": {
         "codeception/codeception": "^3.0",
+        "monolog/monolog": "^1.25",
         "phpstan/phpstan": "^0.11",
         "phpstan/phpstan-beberlei-assert": "^0.11",
         "squizlabs/php_codesniffer": "^3.5"
