--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,12 @@
     },
     "require-dev": {
         "codeception/codeception": "^3.0",
+        "doctrine/orm": "^2.6",
         "monolog/monolog": "^1.25",
-        "phpstan/phpstan": "^0.11",
-        "phpstan/phpstan-beberlei-assert": "^0.11",
+        "phpstan/phpstan": "^0.11.18",
+        "phpstan/phpstan-beberlei-assert": "^0.11.2",
+        "phpstan/phpstan-doctrine": "^0.11.6",
+        "phpstan/phpstan-phpunit": "^0.11.2",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "scripts": {
