--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "symfony/http-kernel": "^4.3",
         "symfony/routing": "^4.3",
         "symfony/twig-bundle": "^4.3",
+        "symfony/validator": "^4.3",
         "twig/twig": "^2.12"
     },
     "scripts": {
