--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "ramsey/uuid": "^3.8"
     },
     "require-dev": {
+        "ext-pdo_sqlite": "*",
         "codeception/codeception": "^3.1",
+        "doctrine/doctrine-bundle": "^1.11",
         "doctrine/orm": "^2.6",
         "guzzlehttp/psr7": "^1.5",
         "league/flysystem-aws-s3-v3": "^1.0",
