--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -3,8 +3,12 @@ modules:
     enabled:
         - Asserts
         - FSi\Tests\Helper\Functional
+        - FSi\Tests\Module\DbModule
         - FSi\Tests\Module\UploadModule
         - Symfony:
             app_path: tests/_support/project/src
             environment: test
             kernel_class: FSi\Tests\App\Kernel
+        - Doctrine2:
+            depends: Symfony
+            cleanup: true
