--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "beberlei/assert": "^3.2",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
-        "ramsey/uuid": "^3.8"
+        "ramsey/uuid": "^3.8|^4.0"
     },
     "require-dev": {
         "ext-pdo_sqlite": "*",
