Upgraded php, phpstan and raised analyzis level to 8

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,7 +3,7 @@ includes:
     - vendor/phpstan/phpstan-doctrine/extension.neon
     - vendor/phpstan/phpstan-phpunit/extension.neon
 parameters:
-    autoload_files:
+    bootstrapFiles:
         - '%rootDir%/../../../vendor/codeception/codeception/autoload.php'
     inferPrivatePropertyTypeFromConstructor: true
     excludes_analyse:
