--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     },
     "require": {
-        "php": ">=7.3",
+        "php": "^7.4",
         "ext-fileinfo": "*",
         "ext-gd": "*",
         "ext-intl": "*",
@@ -38,10 +38,10 @@
         "league/flysystem-memory": "^1.0",
         "monolog/monolog": "^1.25",
         "oneup/flysystem-bundle": "^3.1",
-        "phpstan/phpstan": "^0.11.18",
-        "phpstan/phpstan-beberlei-assert": "^0.11.2",
-        "phpstan/phpstan-doctrine": "^0.11.6",
-        "phpstan/phpstan-phpunit": "^0.11.2",
+        "phpstan/phpstan": "^0.12.0",
+        "phpstan/phpstan-beberlei-assert": "^0.12.0",
+        "phpstan/phpstan-doctrine": "^0.12.0",
+        "phpstan/phpstan-phpunit": "^0.12.0",
         "squizlabs/php_codesniffer": "^3.5",
         "symfony/config": "^4.3",
         "symfony/dependency-injection": "^4.3",
@@ -57,7 +57,7 @@
     },
     "scripts": {
         "sniffer": "vendor/bin/phpcs",
-        "stan": "vendor/bin/phpstan  --ansi analyse -l 7 -c phpstan.neon src tests",
+        "stan": "vendor/bin/phpstan  --ansi analyse -l 8 -c phpstan.neon src tests",
         "cept": "vendor/bin/codecept --ansi",
         "func": "vendor/bin/codecept --ansi run functional",
         "unit": "vendor/bin/codecept --ansi run unit",
