--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
             context: ./docker
             dockerfile: Dockerfile
         container_name: files
+        environment:
+            - XDEBUG_CONFIG=idekey=PHPSTORM
+            - PHP_IDE_CONFIG=serverName=localhost
         ports:
             - 80:80
         volumes:
