--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     },
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "ext-fileinfo": "*",
         "ext-gd": "*",
         "ext-intl": "*",
@@ -30,34 +30,41 @@
     },
     "require-dev": {
         "ext-pdo_sqlite": "*",
-        "codeception/codeception": "^3.1",
-        "doctrine/doctrine-bundle": "^1.11",
+        "aws/aws-sdk-php": "^3.17",
+        "codeception/codeception": "^4.0",
+        "codeception/lib-asserts": "^1.1",
+        "codeception/module-asserts": "^1.1",
+        "codeception/module-doctrine2": "^1.0",
+        "codeception/module-symfony": "^1.5",
+        "doctrine/doctrine-bundle": "^2.0",
         "doctrine/orm": "^2.6",
+        "doctrine/persistence": "^1.3|^2.0",
         "guzzlehttp/psr7": "^1.5",
         "league/flysystem-aws-s3-v3": "^1.0",
         "league/flysystem-memory": "^1.0",
         "monolog/monolog": "^1.25",
         "oneup/flysystem-bundle": "^3.1",
-        "phpstan/phpstan": "^0.12.0",
+        "phpstan/phpstan": "^0.12.66",
         "phpstan/phpstan-beberlei-assert": "^0.12.0",
-        "phpstan/phpstan-doctrine": "^0.12.0",
-        "phpstan/phpstan-phpunit": "^0.12.0",
-        "squizlabs/php_codesniffer": "^3.5",
-        "symfony/config": "^4.3",
-        "symfony/dependency-injection": "^4.3",
-        "symfony/form": "^4.3",
-        "symfony/framework-bundle": "^4.3",
-        "symfony/http-foundation": "^4.3",
-        "symfony/http-kernel": "^4.3",
-        "symfony/routing": "^4.3",
-        "symfony/translation": "^4.3",
-        "symfony/twig-bundle": "^4.3",
-        "symfony/validator": "^4.3",
+        "phpstan/phpstan-doctrine": "^0.12.31",
+        "phpstan/phpstan-phpunit": "^0.12.17",
+        "squizlabs/php_codesniffer": "^3.5.8",
+        "symfony/config": "^4.3|^5.0",
+        "symfony/dependency-injection": "^4.3|^5.0",
+        "symfony/form": "^4.3|^5.0",
+        "symfony/framework-bundle": "^4.3|^5.0",
+        "symfony/http-foundation": "^4.3|^5.0",
+        "symfony/http-kernel": "^4.3|^5.0",
+        "symfony/mime": "^4.3|^5.0",
+        "symfony/routing": "^4.3|^5.0",
+        "symfony/translation": "^4.3|^5.0",
+        "symfony/twig-bundle": "^4.3|^5.0",
+        "symfony/validator": "^4.3|^5.0",
         "twig/twig": "^2.12"
     },
     "scripts": {
         "sniffer": "vendor/bin/phpcs",
-        "stan": "vendor/bin/phpstan  --ansi analyse -l 8 -c phpstan.neon src tests",
+        "stan": "vendor/bin/phpstan  --ansi analyse -c phpstan.neon",
         "cept": "vendor/bin/codecept --ansi",
         "func": "vendor/bin/codecept --ansi run functional",
         "unit": "vendor/bin/codecept --ansi run unit",
