--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "FSi\\Tests\\": "tests/_support",
-            "FSi\\Tests\\App\\": "tests/_support/project/src",
-            "FSi\\Tests\\Component\\Files\\": [
+            "Tests\\FSi\\": "tests/_support",
+            "Tests\\FSi\\App\\": "tests/_support/project/src",
+            "Tests\\FSi\\Component\\Files\\": [
                 "tests/functional",
                 "tests/unit"
             ]
@@ -36,30 +36,30 @@
         "codeception/module-asserts": "^1.1",
         "codeception/module-doctrine2": "^1.0",
         "codeception/module-symfony": "^1.5",
-        "doctrine/doctrine-bundle": "^2.0",
-        "doctrine/orm": "^2.6",
-        "doctrine/persistence": "^1.3|^2.0",
+        "doctrine/doctrine-bundle": "^2.4",
+        "doctrine/orm": "^2.9",
+        "doctrine/persistence": "^2.0",
         "guzzlehttp/psr7": "^1.5",
         "league/flysystem-aws-s3-v3": "^1.0",
         "league/flysystem-memory": "^1.0",
         "monolog/monolog": "^1.25",
-        "oneup/flysystem-bundle": "^3.1",
-        "phpstan/phpstan": "^0.12.66",
-        "phpstan/phpstan-beberlei-assert": "^0.12.0",
-        "phpstan/phpstan-doctrine": "^0.12.31",
-        "phpstan/phpstan-phpunit": "^0.12.17",
-        "squizlabs/php_codesniffer": "^3.5.8",
-        "symfony/config": "^4.3|^5.0",
-        "symfony/dependency-injection": "^4.3|^5.0",
-        "symfony/form": "^4.3|^5.0",
-        "symfony/framework-bundle": "^4.3|^5.0",
-        "symfony/http-foundation": "^4.3|^5.0",
-        "symfony/http-kernel": "^4.3|^5.0",
-        "symfony/mime": "^4.3|^5.0",
-        "symfony/routing": "^4.3|^5.0",
-        "symfony/translation": "^4.3|^5.0",
-        "symfony/twig-bundle": "^4.3|^5.0",
-        "symfony/validator": "^4.3|^5.0",
+        "oneup/flysystem-bundle": "^3.7",
+        "phpstan/phpstan": "^0.12.94",
+        "phpstan/phpstan-beberlei-assert": "^0.12.6",
+        "phpstan/phpstan-doctrine": "^0.12.42",
+        "phpstan/phpstan-phpunit": "^0.12.21",
+        "squizlabs/php_codesniffer": "^3.6",
+        "symfony/config": "^4.4|^5.3",
+        "symfony/dependency-injection": "^4.4|^5.3",
+        "symfony/form": "^4.4|^5.3",
+        "symfony/framework-bundle": "^4.4|^5.3",
+        "symfony/http-foundation": "^4.4|^5.3",
+        "symfony/http-kernel": "^4.4|^5.3",
+        "symfony/mime": "^4.4|^5.3",
+        "symfony/routing": "^4.4|^5.3",
+        "symfony/translation": "^4.4|^5.3",
+        "symfony/twig-bundle": "^4.4|^5.3",
+        "symfony/validator": "^4.4|^5.3",
         "twig/twig": "^2.12"
     },
     "scripts": {
