--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
         environment:
             - XDEBUG_CONFIG=idekey=PHPSTORM
             - PHP_IDE_CONFIG=serverName=localhost
+            - APP_ENV=test
+            - DOCROOT=/tests/_support/project/public
         ports:
             - 80:80
         volumes:
