--- a/composer.json
+++ b/composer.json
@@ -31,11 +31,12 @@
     "require-dev": {
         "ext-pdo_sqlite": "*",
         "aws/aws-sdk-php": "^3.17",
-        "codeception/codeception": "^4.0",
-        "codeception/lib-asserts": "^1.1",
-        "codeception/module-asserts": "^1.1",
-        "codeception/module-doctrine2": "^1.0",
-        "codeception/module-symfony": "^1.5",
+        "codeception/codeception": "^4.1.22",
+        "codeception/lib-asserts": "^1.13",
+        "codeception/module-asserts": "^1.3.1",
+        "codeception/module-doctrine2": "^1.1.1",
+        "codeception/module-symfony": "^2.0.5",
+        "codeception/stub": "^3.7",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/orm": "^2.9",
         "doctrine/persistence": "^2.0",
@@ -43,6 +44,7 @@
         "league/flysystem-aws-s3-v3": "^1.0",
         "league/flysystem-memory": "^1.0",
         "monolog/monolog": "^1.25",
+        "nyholm/psr7": "^1.4",
         "oneup/flysystem-bundle": "^3.7",
         "phpstan/phpstan": "^0.12.94",
         "phpstan/phpstan-beberlei-assert": "^0.12.6",
@@ -53,6 +55,7 @@
         "symfony/dependency-injection": "^4.4|^5.3",
         "symfony/form": "^4.4|^5.3",
         "symfony/framework-bundle": "^4.4|^5.3",
+        "symfony/http-client": "^4.4|^5.3",
         "symfony/http-foundation": "^4.4|^5.3",
         "symfony/http-kernel": "^4.4|^5.3",
         "symfony/mime": "^4.4|^5.3",
