--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,6 +3,7 @@ includes:
     - vendor/phpstan/phpstan-doctrine/extension.neon
     - vendor/phpstan/phpstan-phpunit/extension.neon
 parameters:
+    reportUnmatchedIgnoredErrors: false
     bootstrapFiles:
         - '%rootDir%/../../../vendor/codeception/codeception/autoload.php'
     level: 8
@@ -14,3 +15,8 @@ parameters:
         - '%rootDir%/../../../tests/_support/_generated'
         - '%rootDir%/../../../tests/_support/project/var'
         - '%rootDir%/../../../tests/_support/UnitTester.php'
+        - '%rootDir%/../../../tests/unit/Entity/UnionTestEntity.php'
+        - '%rootDir%/../../../tests/unit/FileUnionPropertyConfigurationTest.php'
+    ignoreErrors:
+        - '#Call to an undefined method ReflectionProperty\:\:hasDefaultValue\(\)\.#'
+        - '#Call to an undefined method ReflectionProperty\:\:getDefaultValue\(\)\.#'
