--- a/composer.json
+++ b/composer.json
@@ -88,5 +88,11 @@
         },
         "process-timeout": 0,
         "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0-dev",
+            "1.x": "1.x-dev"
+        }
     }
 }
