--- a/composer.json
+++ b/composer.json
@@ -46,13 +46,14 @@
         "monolog/monolog": "^2.6",
         "nyholm/psr7": "^1.5",
         "oneup/flysystem-bundle": "^4.4",
-        "phpstan/phpstan": "^1.0",
-        "phpstan/phpstan-beberlei-assert": "^1.0",
+        "phpstan/phpstan": "^1.10.19",
+        "phpstan/phpstan-beberlei-assert": "^1.1",
         "phpstan/phpstan-doctrine": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
         "squizlabs/php_codesniffer": "^3.6",
         "symfony/config": "^4.4|^5.3",
         "symfony/dependency-injection": "^4.4|^5.3",
+        "symfony/dom-crawler": "^4.4.9|^5.3",
         "symfony/form": "^4.4|^5.3",
         "symfony/framework-bundle": "^4.4|^5.3",
         "symfony/http-client": "^4.4|^5.3",
