--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,10 @@ matrix:
         - php: 8.0
           env:
               - CODECEPT_ENV='-- --env php8'
-        - php: 8.1.0
+        - php: 8.1
+          env:
+              - CODECEPT_ENV='-- --env php8'
+        - php: 8.2
           env:
               - CODECEPT_ENV='-- --env php8'
 
