--- a/composer.json
+++ b/composer.json
@@ -51,20 +51,20 @@
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-phpunit": "^1.2",
         "squizlabs/php_codesniffer": "^3.7",
-        "symfony/config": "^4.4|^5.4",
-        "symfony/dependency-injection": "^4.4|^5.4",
+        "symfony/config": "^4.4|^5.4|^6.0",
+        "symfony/dependency-injection": "^4.4|^5.4|^6.0",
         "symfony/dom-crawler": "^4.4.9|^5.4",
-        "symfony/form": "^4.4|^5.4",
+        "symfony/form": "^4.4|^5.4|^6.0",
         "symfony/framework-bundle": "^4.4|^5.4",
-        "symfony/http-client": "^4.4|^5.4",
-        "symfony/http-foundation": "^4.4|^5.4",
-        "symfony/http-kernel": "^4.4|^5.4",
-        "symfony/mime": "^4.4|^5.4",
+        "symfony/http-client": "^4.4|^5.4|^6.0",
+        "symfony/http-foundation": "^4.4|^5.4|^6.0",
+        "symfony/http-kernel": "^4.4|^5.4|^6.0",
+        "symfony/mime": "^4.4|^5.4|^6.0",
         "symfony/routing": "^4.4|^5.4",
-        "symfony/translation": "^4.4|^5.4",
-        "symfony/twig-bundle": "^4.4|^5.4",
+        "symfony/translation": "^4.4|^5.4|^6.0",
+        "symfony/twig-bundle": "^4.4|^5.4|^6.0",
         "symfony/validator": "^4.4|^5.4",
-        "twig/twig": "^2.12|^3.4"
+        "twig/twig": "^3.4"
     },
     "scripts": {
         "sniffer": "vendor/bin/phpcs",
