--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "codeception/stub": "^3.7",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/orm": "^2.13",
-        "doctrine/persistence": "^2.5",
+        "doctrine/persistence": "^2.5|^3.2",
         "guzzlehttp/psr7": "^1.9",
         "league/flysystem-aws-s3-v3": "^2.0|^3.10",
         "league/flysystem-memory": "^2.0|^3.3",
@@ -53,7 +53,7 @@
         "squizlabs/php_codesniffer": "^3.7",
         "symfony/config": "^4.4|^5.4|^6.0",
         "symfony/dependency-injection": "^4.4|^5.4|^6.0",
-        "symfony/dom-crawler": "^4.4.9|^5.4",
+        "symfony/dom-crawler": "^4.4.9|^5.4|^6.0",
         "symfony/form": "^4.4|^5.4|^6.0",
         "symfony/framework-bundle": "^4.4|^5.4",
         "symfony/http-client": "^4.4|^5.4|^6.0",
@@ -80,6 +80,7 @@
         ]
     },
     "conflict": {
+        "doctrine/persistence": "<2.0",
         "oneup/flysystem-bundle": "<4.0",
         "symfony/validator": ">=6.0"
     },
