--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     },
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.1",
         "ext-fileinfo": "*",
         "ext-gd": "*",
         "ext-intl": "*",
@@ -31,16 +31,17 @@
     "require-dev": {
         "ext-pdo_sqlite": "*",
         "aws/aws-sdk-php": "^3.17",
-        "codeception/codeception": "^4.2",
-        "codeception/lib-asserts": "^1.13",
-        "codeception/module-asserts": "^1.3.1",
-        "codeception/module-doctrine2": "^1.1.1",
-        "codeception/module-symfony": "^2.1",
-        "codeception/stub": "^3.7",
+        "codeception/codeception": "^5.1",
+        "codeception/lib-asserts": "^2.0",
+        "codeception/module-asserts": "^3.0",
+        "codeception/module-doctrine": "^3.1",
+        "codeception/module-symfony": "^3.4",
+        "codeception/stub": "^4.1.3",
         "doctrine/doctrine-bundle": "^2.7",
-        "doctrine/orm": "^2.13",
+        "doctrine/dbal": "^3.0",
+        "doctrine/orm": "^2.13|^3.0",
         "doctrine/persistence": "^2.0|^3.0",
-        "guzzlehttp/psr7": "^1.9",
+        "guzzlehttp/psr7": "^2.0",
         "league/flysystem-aws-s3-v3": "^2.0|^3.10",
         "league/flysystem-memory": "^2.0|^3.3",
         "monolog/monolog": "^2.8",
@@ -50,20 +51,22 @@
         "phpstan/phpstan-beberlei-assert": "^1.1",
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-phpunit": "^1.2",
+        "phpunit/phpunit": "^10.5.21",
         "squizlabs/php_codesniffer": "^3.7",
-        "symfony/config": "^4.4|^5.4|^6.0",
-        "symfony/dependency-injection": "^4.4|^5.4|^6.0",
-        "symfony/dom-crawler": "^4.4.9|^5.4|^6.0",
-        "symfony/form": "^4.4|^5.4|^6.0",
-        "symfony/framework-bundle": "^4.4|^5.4",
-        "symfony/http-client": "^4.4|^5.4|^6.0",
-        "symfony/http-foundation": "^4.4|^5.4|^6.0",
-        "symfony/http-kernel": "^4.4|^5.4|^6.0",
-        "symfony/mime": "^4.4|^5.4|^6.0",
-        "symfony/routing": "^4.4|^5.4",
-        "symfony/translation": "^4.4|^5.4|^6.0",
-        "symfony/twig-bundle": "^4.4|^5.4|^6.0",
-        "symfony/validator": "^4.4|^5.4",
+        "symfony/config": "^5.4|^6.0",
+        "symfony/dependency-injection": "^5.4|^6.0",
+        "symfony/dom-crawler": "^5.4|^6.0",
+        "symfony/form": "^5.4|^6.0",
+        "symfony/framework-bundle": "5.4",
+        "symfony/http-client": "^5.4|^6.0",
+        "symfony/http-foundation": "^5.4|^6.0",
+        "symfony/http-kernel": "^5.4|^6.0",
+        "symfony/mime": "^5.4|^6.0",
+        "symfony/routing": "^5.4|^6.0",
+        "symfony/translation": "^5.4|^6.0",
+        "symfony/twig-bundle": "^5.4|^6.0",
+        "symfony/validator": "^5.4|^6.0",
+        "symfony/yaml": "^5.4|^6.0",
         "twig/twig": "^3.4"
     },
     "scripts": {
@@ -82,7 +85,8 @@
     "conflict": {
         "doctrine/persistence": "<2.0",
         "oneup/flysystem-bundle": "<4.0",
-        "symfony/validator": ">=6.0"
+        "symfony/yaml": ">=7.0",
+        "symfony/doctrine-bridge": ">=7.0"
     },
     "config": {
         "bin-dir": "vendor/bin",
@@ -94,7 +98,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0-dev",
+            "dev-master": "2.1-dev",
+            "2.0": "2.0-dev",
             "1.x": "1.x-dev"
         }
     }
