--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,7 @@
         "symfony/http-foundation": "^5.4|^6.0",
         "symfony/http-kernel": "^5.4|^6.0",
         "symfony/mime": "^5.4|^6.0",
+        "symfony/options-resolver": "^5.4|^6.0",
         "symfony/routing": "^5.4|^6.0",
         "symfony/translation": "^5.4|^6.0",
         "symfony/twig-bundle": "^5.4|^6.0",
