--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/dbal": "^3.0",
         "doctrine/orm": "^2.13|^3.0",
-        "doctrine/persistence": "^2.0|^3.0",
+        "doctrine/persistence": "^3.0",
         "guzzlehttp/psr7": "^2.0",
         "league/flysystem-aws-s3-v3": "^2.0|^3.10",
         "league/flysystem-memory": "^2.0|^3.3",
@@ -49,12 +49,13 @@
         "oneup/flysystem-bundle": "^4.4",
         "phpstan/phpstan": "^1.10.19",
         "phpstan/phpstan-beberlei-assert": "^1.1",
-        "phpstan/phpstan-doctrine": "^1.3",
+        "phpstan/phpstan-doctrine": "^1.3.60",
         "phpstan/phpstan-phpunit": "^1.2",
         "phpunit/phpunit": "^10.5.21",
         "squizlabs/php_codesniffer": "^3.7",
         "symfony/config": "^5.4|^6.0",
         "symfony/dependency-injection": "^5.4|^6.0",
+        "symfony/doctrine-bridge": "^5.4.30|^6.0",
         "symfony/dom-crawler": "^5.4|^6.0",
         "symfony/form": "^5.4|^6.0",
         "symfony/framework-bundle": "5.4",
