--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -12,3 +12,6 @@ modules:
         - Doctrine:
             depends: Symfony
             cleanup: true
+        - REST:
+              url: http://localhost
+              depends: Symfony
