--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,16 @@
         "ext-gd": "*",
         "ext-intl": "*",
         "beberlei/assert": "^3.2",
+        "psr/clock": "^1.0",
+        "psr/clock-implementation": "*",
         "psr/event-dispatcher": "^1.0",
+        "psr/event-dispatcher-implementation": "*",
         "psr/http-client": "^1.0",
+        "psr/http-client-implementation": "*",
         "psr/http-factory": "^1.0",
-        "psr/http-message": "^1.0.1",
+        "psr/http-factory-implementation": "*",
+        "psr/http-message": "^1.0.1|^2.0",
+        "psr/http-message-implementation": "*",
         "ramsey/uuid": "^3.8|^4.0"
     },
     "require-dev": {
@@ -38,10 +44,11 @@
         "codeception/lib-asserts": "^2.0",
         "codeception/module-asserts": "^3.0",
         "codeception/module-doctrine": "^3.1",
+        "codeception/module-rest": "^3.4",
         "codeception/module-symfony": "^3.4",
         "codeception/stub": "^4.1.3",
-        "doctrine/doctrine-bundle": "^2.7",
         "doctrine/dbal": "^3.0",
+        "doctrine/doctrine-bundle": "^2.7",
         "doctrine/orm": "^2.13|^3.0",
         "doctrine/persistence": "^3.0",
         "guzzlehttp/psr7": "^2.0",
@@ -53,9 +60,10 @@
         "phpstan/phpstan": "^1.10.19",
         "phpstan/phpstan-beberlei-assert": "^1.1",
         "phpstan/phpstan-doctrine": "^1.3.60",
-        "phpstan/phpstan-phpunit": "^1.2",
+        "phpstan/phpstan-phpunit": "^1.3",
         "phpunit/phpunit": "^10.5.21",
         "squizlabs/php_codesniffer": "^3.7",
+        "symfony/clock": "^6.0",
         "symfony/config": "^5.4|^6.0",
         "symfony/dependency-injection": "^5.4|^6.0",
         "symfony/doctrine-bridge": "^5.4.30|^6.0",
@@ -67,6 +75,7 @@
         "symfony/http-kernel": "^5.4|^6.0",
         "symfony/mime": "^5.4|^6.0",
         "symfony/options-resolver": "^5.4|^6.0",
+        "symfony/psr-http-message-bridge": "^2.2|^6.4",
         "symfony/routing": "^5.4|^6.0",
         "symfony/translation": "^5.4|^6.0",
         "symfony/twig-bundle": "^5.4|^6.0",
