--- a/composer.json
+++ b/composer.json
@@ -98,7 +98,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.1-dev",
+            "dev-master": "3.0-dev",
+            "2.1": "2.1-dev",
             "2.0": "2.0-dev",
             "1.x": "1.x-dev"
         }
