Docs updates with refactor

--- a/src/Integration/Symfony/Resources/config/routing/local_upload.yaml
+++ b/src/Integration/Symfony/Resources/config/routing/local_upload.yaml
@@ -2,6 +2,6 @@
 local_upload:
   path: "/{filesystem}/{path}"
   controller: FSi\Component\Files\DirectUpload\Controller\LocalUploadController
-  methods: ["POST"]
+  methods: ["PUT"]
   requirements:
     path: ".+"
